style: update variable
